[레거시 코드 리팩터링 - 2단계] 푸우(백승준) 미션 제출합니다. (#599)
* refactor: Menu 와 MenuGroup Controller 가 도메인을 사용하지 않도록 변경

* refactor: OrderController 가 도메인을 반환하지 않도록 변경

* feat: ProductController 에서 도메인을 사용하지 않도록 변경

* feat: TableGroupController 에서 도메인을 사용하지 않도록 변경

* feat: TableController 에서 도메인을 사용하지 않도록 변경

* test: 깨지는 테스트 수정

* refactor: domain setter 삭제

* refactor: JPA 적용

* refactor: 기존 Dao 로직 삭제

* refactor: 테스트와 support 분리

* refactor: 서비스 로직 개선

* feat: 사용하지 않는 repository method 삭제

* test: 도메인 테스트 작성

* test: 깨지는 테스트 수정

* feat: Transactional 적용

* feat: 상품 validation 추가

* feat: 예외 메시지 작성

* feat: menuProduct 생성 책임을 menu 에게 할당

* chore: 메서드 순서 변경

* refactor: Order 생성 책임을 OrderTable 에게 위임한다.

* refactor: TableGroup 생성 시 orderTables 를 넘긴다

* feat: MenuProduct 를 Menu 의 생성자로 넘겨준다

* feat: TableGroup 에서 OrderTable 을 Persist 하지 않도록 변경