@@ -9,19 +9,24 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.BDDMockito.given;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderLineItemDao;
-import kitchenpos.dao.OrderTableDao;
 import kitchenpos.domain.Order;
 import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.dto.request.OrderCreateRequest;
+import kitchenpos.dto.request.OrderLineRequest;
+import kitchenpos.dto.request.OrderStatusChangeRequest;
+import kitchenpos.dto.response.OrderResponse;
+import kitchenpos.fixture.MenuFixture;
 import kitchenpos.fixture.OrderFixture;
-import kitchenpos.fixture.OrderLineItemFixture;
 import kitchenpos.fixture.OrderTableFixture;
+import kitchenpos.repository.MenuRepository;
+import kitchenpos.repository.OrderLineItemRepository;
+import kitchenpos.repository.OrderRepository;
+import kitchenpos.repository.OrderTableRepository;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator.ReplaceUnderscores;
 import org.junit.jupiter.api.Nested;
@@ -39,16 +44,16 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class OrderServiceTest {
 
     @Mock
-    private MenuDao menuDao;
+    private MenuRepository menuRepository;
 
     @Mock
-    private OrderDao orderDao;
+    private OrderRepository orderRepository;
 
     @Mock
-    private OrderLineItemDao orderLineItemDao;
+    private OrderLineItemRepository orderLineItemRepository;
 
     @Mock
-    private OrderTableDao orderTableDao;
+    private OrderTableRepository orderTableRepository;
 
     @Captor
     ArgumentCaptor<Order> orderArgumentCaptor;
@@ -63,145 +68,124 @@ class OrderServiceTest {
     class 주문_생성 {
 
         @Test
-        void 주문_항목이_없으면_예() {
+        void 주문_항목이_없으면_예외() {
             // given
-            Order order = OrderFixture.builder()
-                .build();
+            OrderCreateRequest request = new OrderCreateRequest(1L,
+                OrderStatus.COOKING.name(),
+                LocalDateTime.now(),
+                null);
 
             // when && then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
-        void 같은_메뉴에_대한_주문_항목이_있으면_예외() {
+        void 존재하지_않는_메뉴가_포함되어_있으면_예외() {
             // given
-            OrderLineItem firstOderLineItem = OrderLineItemFixture.builder()
-                .withMenuId(1L)
-                .build();
+            OrderCreateRequest request = new OrderCreateRequest(1L,
+                OrderStatus.COOKING.name(),
+                LocalDateTime.now(),
+                List.of(
+                    new OrderLineRequest(1L, 10L)
+                ));
 
-            OrderLineItem secondOrderLineItem = OrderLineItemFixture.builder()
-                .withMenuId(1L)
-                .build();
+            given(orderTableRepository.findById(anyLong()))
+                .willReturn(Optional.of(
+                    OrderTableFixture.builder().build()
+                ));
 
-            Order order = OrderFixture.builder()
-                .withOrderLineItems(List.of(firstOderLineItem, secondOrderLineItem))
-                .build();
-
-            given(menuDao.countByIdIn(anyList()))
-                .willReturn(1L);
+            given(menuRepository.findAllByIdIn(anyList()))
+                .willReturn(Collections.emptyList());
 
             // when && then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 존재하지_않는_주문_테이블이면_예외() {
             // given
-            OrderLineItem firstOderLineItem = OrderLineItemFixture.builder()
-                .withMenuId(1L)
-                .build();
+            OrderCreateRequest request = new OrderCreateRequest(1L,
+                OrderStatus.COOKING.name(),
+                LocalDateTime.now(),
+                List.of(
+                    new OrderLineRequest(1L, 10L),
+                    new OrderLineRequest(1L, 5L)
+                ));
 
-            OrderLineItem secondOrderLineItem = OrderLineItemFixture.builder()
-                .withMenuId(2L)
-                .build();
-
-            long notExistenceOrderTable = 1L;
-            Order order = OrderFixture.builder()
-                .withOrderTableId(notExistenceOrderTable)
-                .withOrderLineItems(List.of(firstOderLineItem, secondOrderLineItem))
-                .build();
-
-            given(menuDao.countByIdIn(anyList()))
-                .willReturn(2L);
-
-            given(orderTableDao.findById(anyLong()))
+            given(orderTableRepository.findById(anyLong()))
                 .willReturn(Optional.empty());
 
             // when && then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 비어있는_주문_테이블을_보내면_예외() {
             // given
-            OrderLineItem firstOderLineItem = OrderLineItemFixture.builder()
-                .withMenuId(1L)
-                .build();
-
-            OrderLineItem secondOrderLineItem = OrderLineItemFixture.builder()
-                .withMenuId(2L)
-                .build();
-
-            long emptyOrderTable = 1L;
-            Order order = OrderFixture.builder()
-                .withOrderTableId(emptyOrderTable)
-                .withOrderLineItems(List.of(firstOderLineItem, secondOrderLineItem))
-                .build();
+            OrderCreateRequest request = new OrderCreateRequest(1L,
+                OrderStatus.COOKING.name(),
+                LocalDateTime.now(),
+                List.of(new OrderLineRequest(1L, 10L)));
 
             OrderTable orderTable = OrderTableFixture.builder()
                 .withEmpty(true)
                 .build();
 
-            given(menuDao.countByIdIn(anyList()))
-                .willReturn(2L);
+            given(menuRepository.findAllByIdIn(anyList()))
+                .willReturn(List.of(
+                    MenuFixture.builder()
+                        .withId(1L)
+                        .withPrice(0L)
+                        .build()
+                ));
 
-            given(orderTableDao.findById(anyLong()))
+            given(orderTableRepository.findById(anyLong()))
                 .willReturn(Optional.of(orderTable));
 
             // when && then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("해당 테이블은 비어있습니다.");
         }
-    }
 
-    @Test
-    void 생성_성공() {
-        {
+        @Test
+        void 생성_성공() {
             // given
-            OrderLineItem firstOderLineItem = OrderLineItemFixture.builder()
-                .withSeq(1L)
-                .withMenuId(1L)
-                .build();
-
-            OrderLineItem secondOrderLineItem = OrderLineItemFixture.builder()
-                .withSeq(2L)
-                .withMenuId(2L)
-                .build();
-
-            long orderId = 1L;
-            OrderFixture orderFixture = OrderFixture.builder()
-                .withId(orderId)
-                .withOrderTableId(1L)
-                .withOrderLineItems(List.of(firstOderLineItem, secondOrderLineItem));
-            Order order = orderFixture
-                .build();
+            OrderLineRequest firstOrderLineRequest = new OrderLineRequest(1L, 10L);
+            OrderCreateRequest request = new OrderCreateRequest(1L,
+                OrderStatus.COOKING.name(),
+                LocalDateTime.now(),
+                List.of(firstOrderLineRequest));
 
             OrderTable orderTable = OrderTableFixture.builder()
                 .withEmpty(false)
                 .build();
 
-            given(menuDao.countByIdIn(anyList()))
-                .willReturn(2L);
-
-            given(orderTableDao.findById(anyLong()))
+            given(orderTableRepository.findById(anyLong()))
                 .willReturn(Optional.of(orderTable));
 
-            given(orderDao.save(any())).willReturn(
-                orderFixture
+            given(menuRepository.findAllByIdIn(anyList()))
+                .willReturn(List.of(
+                    MenuFixture.builder()
+                        .withId(1L)
+                        .withPrice(0L)
+                        .build()
+                ));
+
+            long orderId = 1;
+            given(orderRepository.save(any())).willReturn(
+                OrderFixture.builder()
+                    .withId(orderId)
                     .withOrderStatus(OrderStatus.COOKING.name())
                     .withOrderedTime(LocalDateTime.now())
                     .build()
             );
 
-            given(orderLineItemDao.save(any()))
-                .willReturn(firstOderLineItem, secondOrderLineItem);
-
             // when
-            Order actual = orderService.create(order);
+            OrderResponse actual = orderService.create(request);
 
             // then
             assertSoftly(softAssertions -> {
@@ -210,36 +194,27 @@ class OrderServiceTest {
                 assertThat(actual.getOrderLineItems())
                     .allMatch(orderLineItem -> orderLineItem.getOrderId().equals(orderId));
             });
+
         }
     }
 
     @Test
     void 주문_목록_조회() {
         // given
+        long orderId = 1L;
         Order order = OrderFixture.builder()
-            .withId(1L)
+            .withId(orderId)
             .build();
-        given(orderDao.findAll())
+        given(orderRepository.findAll())
             .willReturn(List.of(
-                order,
                 order
             ));
 
-        OrderLineItem orderLineItem = OrderLineItemFixture.builder().build();
-        given(orderLineItemDao.findAllByOrderId(anyLong()))
-            .willReturn(
-                List.of(orderLineItem, orderLineItem),
-                List.of(orderLineItem, orderLineItem)
-            );
-
         // when
-        List<Order> orders = orderService.list();
+        List<OrderResponse> actual = orderService.list();
 
         // then
-        assertSoftly(softAssertions -> {
-            assertThat(orders).hasSize(2);
-            assertThat(orders).allMatch(od -> od.getOrderLineItems().size() != 0);
-        });
+        assertThat(actual).hasSize(1);
     }
 
     @Nested
@@ -250,56 +225,51 @@ class OrderServiceTest {
         @Test
         void 존재하지_않는_주문이면_예외() {
             // given
-            Order requestOrder = OrderFixture.builder().build();
-            given(orderDao.findById(anyLong()))
+            OrderStatusChangeRequest request = new OrderStatusChangeRequest(
+                OrderStatus.COMPLETION.name());
+            given(orderRepository.findById(anyLong()))
                 .willReturn(Optional.empty());
 
             // when && then
-            assertThatThrownBy(() -> orderService.changeOrderStatus(orderId, requestOrder))
+            assertThatThrownBy(() -> orderService.changeOrderStatus(orderId, request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 주문이_완료된_상태라면_예외() {
             // given
-            Order requestOrder = OrderFixture.builder().build();
+            OrderStatusChangeRequest request = new OrderStatusChangeRequest(
+                OrderStatus.COMPLETION.name());
             Order savedOrder = OrderFixture.builder()
                 .withOrderStatus(OrderStatus.COMPLETION.name())
                 .build();
 
-            given(orderDao.findById(anyLong()))
+            given(orderRepository.findById(anyLong()))
                 .willReturn(Optional.of(savedOrder));
 
             // when && then
-            assertThatThrownBy(() -> orderService.changeOrderStatus(orderId, requestOrder))
+            assertThatThrownBy(() -> orderService.changeOrderStatus(orderId, request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 변경_성공() {
             // given
-            String changeOrderStatus = OrderStatus.MEAL.name();
-            Order requestOrder = OrderFixture.builder()
-                .withOrderStatus(changeOrderStatus)
-                .build();
+            String completionStatus = OrderStatus.COMPLETION.name();
+            OrderStatusChangeRequest request = new OrderStatusChangeRequest(
+                completionStatus);
             Order savedOrder = OrderFixture.builder()
                 .withOrderStatus(OrderStatus.COOKING.name())
                 .build();
 
-            given(orderDao.findById(anyLong()))
+            given(orderRepository.findById(anyLong()))
                 .willReturn(Optional.of(savedOrder));
 
-            given(orderDao.save(any()))
-                .willReturn(requestOrder);
-
-            given(orderLineItemDao.findAllByOrderId(anyLong()))
-                .willReturn(List.of(OrderLineItemFixture.builder().build()));
-
             // when
-            Order actual = orderService.changeOrderStatus(orderId, requestOrder);
+            OrderResponse actual = orderService.changeOrderStatus(orderId, request);
 
             // then
-            assertThat(actual.getOrderStatus()).isEqualTo(changeOrderStatus);
+            assertThat(actual.getOrderStatus()).isEqualTo(completionStatus);
         }
     }
 }
